--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,2 +1,5 @@
 name: 'dbt_first_project'
-model-paths: ["sql_models"]
+model-paths: ["models"]
+seed-paths: ["seeds"]
+models:
+  materialized: table
