Added adhoc query for analysis

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,5 +1,6 @@
 name: 'dbt_first_project'
 model-paths: ["models"]
 seed-paths: ["seeds"]
+analysis-paths: ["analysis"]
 models:
   materialized: table
