Add Macros folder

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,5 +2,6 @@ name: 'dbt_first_project'
 model-paths: ["models"]
 seed-paths: ["seeds"]
 analysis-paths: ["analysis"]
+macro-paths: ["macros"]
 models:
   materialized: table
