macro to convert currency to rupees

--- a/models/properties.yml
+++ b/models/properties.yml
@@ -12,6 +12,9 @@ sources:
       - name: dept
       - name: raw_product_ship
       - name: sales 
+      - name: order_payment
+
+
 models:
   - name: src_users
     config:
