currency_convert_to_rupees

--- a/models/properties.yml
+++ b/models/properties.yml
@@ -13,6 +13,7 @@ sources:
       - name: raw_product_ship
       - name: sales 
       - name: order_payment
+      - name: daily_sales 
 
 
 models:
