Adding Test case

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -4,5 +4,7 @@ seed-paths: ["seeds"]
 analysis-paths: ["analysis"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
+test-paths: ["tests"]
+ 
 models:
   materialized: table
