--- a/models/properties.yml
+++ b/models/properties.yml
@@ -6,19 +6,27 @@ sources:
     tables:
       - name: raw_users
       - name: raw_country
-      - name:  raw_sales
+      - name: raw_sales
       - name: a2_data
       - name: emp
       - name: dept
       - name: raw_product_ship
-      - name: sales 
+      - name: sales
       - name: order_payment
-      - name: daily_sales 
+      - name: daily_sales
       - name: scd_example
       - name: employee_details
-
+      - name: emp_details_upd
+      - name: emp_details_delete_insert
+      - name: resort
+      - name: PII_RAW
 
 models:
   - name: src_users
     config:
       materialized: table
+  - name: pii_data
+    columns:
+      - name: ID
+        tests:
+          - unique
